[FIX] UAB: fixing site icon overflow

--- a/themes/base_files/scss/feature/adminui.scss
+++ b/themes/base_files/scss/feature/adminui.scss
@@ -594,6 +594,11 @@ $color-light:    rgba(0, 0, 0, 0.5);
     border: none;
 }
 
+.tiki-admin .admin-content nav.navbar-expand-md.mb-4 .navbar-brand img {
+    max-width: 32px;
+    max-height: 32px;
+}
+
 .tiki-admin .box-logo {
     display: none;
 }
